fix: warning_ovirt_rule_notapplicable/doc: add type
Param must start line

--- a/shared/macros/10-warning.jinja
+++ b/shared/macros/10-warning.jinja
@@ -2,7 +2,8 @@
     Adds a boiler plate warning with a justification why a rule is disabled on RHV.
     Note: This is only applied on RHEL8 content.
 
-    :param rationale: Explanation why RHV needs the rule disabled.
+:param rationale: Explanation why RHV needs the rule disabled.
+:type rationale: str
 
 #}}
 {{% macro warning_ovirt_rule_notapplicable(rationale) %}}
