--- a/shared/macros/10-ansible.jinja
+++ b/shared/macros/10-ansible.jinja
@@ -497,11 +497,17 @@ The following macro remediates Audit syscall rule in :code:`/etc/audit/rules.d` 
 The macro requires following parameters:
 
 :param action_arch_filters: The action and arch filters of the rule. For example, "-a always,exit -F arch=b64"
+:type action_arch_filters: str
 :param other_filters: Other filters that may characterize the rule. For example, "-F a2&03 -F path=/etc/passwd"
+:type other_filters: str
 :param auid_filters: The auid filters of the rule. For example, "-F auid>=1000 -F auid!=unset"
+:type auid_filters: str
 :param syscalls: List of syscalls to ensure presense among audit rules. For example, "['fchown', 'lchown', 'fchownat']"
-:param syscall_groupings: List of other syscalls that can be grouped with 'syscalls'. For example, "['fchown', 'lchown', 'fchownat']"
+:type syscalls: list[str]
+:param syscall_grouping: List of other syscalls that can be grouped with 'syscalls'. For example, "['fchown', 'lchown', 'fchownat']"
+:type syscall_grouping: list[str]
 :param key: The key to use when appending a new rule
+:type key: str
 
 #}}
 {{% macro ansible_audit_augenrules_add_syscall_rule(action_arch_filters="", other_filters="", auid_filters="", syscalls=[], key="", syscall_grouping=[]) -%}}
