--- a/shared/macros/10-ansible.jinja
+++ b/shared/macros/10-ansible.jinja
@@ -1572,12 +1572,19 @@ Part of the grub2_bootloader_argument_absent template.
     relies on authselect. Otherwise, the PAM files will be directly edited.
 
 :param pam_file:        PAM config file.
+:type pam_file: str
 :param group:           PAM management group: auth, account, password or session. Also known as "type".
+:type group: str
 :param control:         PAM control flags.
+:type control: str
 :param module:          PAM module name.
+:type module: str
 :param option:          PAM module option. Optional parameter.
+:type option: str
 :param value:           PAM module option argument, if is case. Optional parameter.
+:type value: str
 :param after_match:     Regex used as reference to include the PAM line below, if necessary. Optional parameter.
+:type after_match: str
 
 #}}
 {{%- macro ansible_ensure_pam_module_configuration(pam_file, group, control, module, option, value='', after_match='') -%}}
