fix: oval_file_contents/doc: add type

--- a/shared/macros/10-oval.jinja
+++ b/shared/macros/10-oval.jinja
@@ -764,6 +764,7 @@ Generates the :code:`<affected>` tag for OVAL check using correct product platfo
 :param filepath: filepath of the file to check
 :type filepath: str
 :param filepath_id: Used like test_whole_file_contents_$filepath_id
+:type filepath_id: str
 :param contents: contents that should be in the file
 :type contents: str
 
