fix: fix_openshift_logging_rbac/doc: add type

--- a/shared/macros/10-fixtext.jinja
+++ b/shared/macros/10-fixtext.jinja
@@ -594,6 +594,7 @@ Migrate the "{{{ part }}}" path onto a separate file system.
 Fixtext for how to restrict RBAC permissions for cluster logging
 
 :param verb: The RBAC verb to restrict
+:type verb: str
 
 #}}
 {{% macro fix_openshift_logging_rbac(verb) -%}}
