--- a/shared/macros/10-bash.jinja
+++ b/shared/macros/10-bash.jinja
@@ -76,13 +76,20 @@ fi
     Make sure that we have a line with given type, control and module has the given option in pamFile (additional options are left as-is):
     `type control module option=valueRegexArg`
 
-:param pamFile:        PAM config file
-:param type:           PAM module interface
-:param control:        PAM control flags
-:param module:         PAM module name
-:param option:         PAM module option
-:param valueRegexArg:   PAM module option argument regex pattern
+:param pamFile: PAM config file
+:type pamFile: str
+:param type: PAM module interface
+:type type: str
+:param control: PAM control flags
+:type control: str
+:param module: PAM module name
+:type module: str
+:param option: PAM module option
+:type option: str
+:param valueRegexArg: PAM module option argument regex pattern
+:type valueRegexArg: str
 :param defaultValueArg: PAM module option argument default value
+:type defaultValueArg: str
 
 #}}
 {{%- macro bash_provide_pam_module_options(pamFile, type, control, module, option, valueRegexArg, defaultValueArg) -%}}
