--- a/shared/macros/10-bash.jinja
+++ b/shared/macros/10-bash.jinja
@@ -1991,6 +1991,7 @@ Part of the grub2_bootloader_argument template.
     Ensures that /etc/default/grub file does not contain the arg_name_value.
 
 :param arg_name: name of the grub parameter, e.g.: "audit"
+:type arg_name: str
 
 #}}
 {{%- macro update_etc_default_grub_manually_absent(arg_name) -%}}
