fix: bash_get_dpkg_package_version/doc: add type

--- a/shared/macros/10-bash.jinja
+++ b/shared/macros/10-bash.jinja
@@ -2132,6 +2132,7 @@ rpm --quiet -q {{{ package }}}
 This macro generates code that gets version of an installed DEB package.
 
 :param package: package name
+:type package: str
 
 #}}
 {{%- macro bash_get_dpkg_package_version(package) -%}}
