fix: bash_chromium_pol_setting/doc: add types

--- a/shared/macros/10-bash.jinja
+++ b/shared/macros/10-bash.jinja
@@ -2183,15 +2183,20 @@ dpkg-query --show --showformat='${db:Status-Status}\n' '{{{ package }}}' 2>/dev/
 Macro to replace configuration setting(s) in the Chromium stig policy (.json) file or add the
 preference if it does not exist.
 
-Example macro invocation:
+Example macro invocation::
 
     {{{ bash_chromium_pol_setting("chrome_stig_policy.json", "/etc/chromium/policies/managed/", "ExtensionInstallBlacklist", "\[\"*\"\]") }}}
 
 :param chrome_pol_file:      Policy file to that will be modified
+:type chrome_pol_file: str
 :param chrome_pol_dir:       Directory where the policy file is located
+:type chrome_pol_dir: str
 :param pol_setting:          The setting that will be modified
+:type pol_setting: str
 :param pol_setting_val:      Value of the setting to replace the current value with
+:type pol_setting_val: str
 :param pol_setting_val_edit: Value of the setting to be inserted if setting and value not present
+:type pol_setting_val_edit: str
 
 #}}
 {{%- macro bash_chromium_pol_setting(chrome_pol_file, chrome_pol_dir, pol_setting, pol_setting_val, pol_setting_val_edit=None) %}}
