fix: bash_remove_pam_module_option/doc: add types

--- a/shared/macros/10-bash.jinja
+++ b/shared/macros/10-bash.jinja
@@ -2381,10 +2381,15 @@ fi
     Remove a PAM module option if present in a PAM module line.
 
 :param pam_file:        PAM config file.
+:type pam_file: str
 :param group:           PAM management group: auth, account, password or session. Also known as "type".
+:type group: str
 :param control:         PAM control flags. Optional parameter, but recommended to be informed whenever possible.
+:type control: str
 :param module:          PAM module name.
+:type module: str
 :param option:          PAM module option.
+:type option: str
 
 #}}
 {{%- macro bash_remove_pam_module_option(pam_file, group, control, module, option) -%}}
