fix: bash_ensure_pam_module_configuration/doc: add types

--- a/shared/macros/10-bash.jinja
+++ b/shared/macros/10-bash.jinja
@@ -2456,12 +2456,19 @@ fi
     relies on authselect. Otherwise, the PAM files will be directly edited.
 
 :param pam_file:        PAM config file.
+:type pam_file: str
 :param group:           PAM management group: auth, account, password or session. Also known as "type".
+:type group: str
 :param control:         PAM control flags.
+:type control: str
 :param module:          PAM module name.
+:type module: str
 :param option:          PAM module option. Optional parameter.
+:type option: str
 :param value:           PAM module option argument, if is case. Optional parameter.
+:type value: str
 :param after_match:     Regex used as reference to include the PAM line below, if necessary. Optional parameter.
+:type after_match: str
 
 #}}
 {{%- macro bash_ensure_pam_module_configuration(pam_file, group, control, module, option='', value='', after_match='') -%}}
