fix: grub2_bootloader_argument_absent_remediation/doc: fix type format

--- a/shared/macros/10-bash.jinja
+++ b/shared/macros/10-bash.jinja
@@ -1992,7 +1992,7 @@ Macro for Bash remediation for removing a kernel command line argument from the 
 Part of the grub2_bootloader_argument_absent template.
 
 :param arg_name: Name of the kernel command line argument that will be removed from GRUB 2 configuration.
-:type arg_name str:
+:type arg_name: str
 
 #}}
 {{% macro grub2_bootloader_argument_absent_remediation(arg_name) %}}
