fix: oval_grub_config/doc: fix type

--- a/shared/macros/10-oval.jinja
+++ b/shared/macros/10-oval.jinja
@@ -567,7 +567,7 @@ Generates the :code:`<affected>` tag for OVAL check using correct product platfo
 :param parameter: The parameter to be checked in the configuration file.
 :type parameter: str
 :param value: The value to be checked. This can also be a regular expression (e.g: value1|value2 can match both values).
-:type parameter: str
+:type value: str
 :param missing_parameter_pass: If set, the check will also pass if the parameter is not present in the configuration file (default is applied).
 :type missing_parameter_pass: bool
 :param multi_value: If set, it means that the parameter can accept multiple values and the expected value must be present in the current list of values.
