fix: oval_auditd_config/doc: fix types

--- a/shared/macros/10-oval.jinja
+++ b/shared/macros/10-oval.jinja
@@ -531,7 +531,7 @@ Generates the :code:`<affected>` tag for OVAL check using correct product platfo
 :param missing_parameter_pass: If set, the check will also pass if the parameter is not present in the configuration file (default is applied).
 :type missing_parameter_pass: bool
 :param multi_value: If set, it means that the parameter can accept multiple values and the expected value must be present in the current list of values.
-:type missing_parameter_pass: bool
+:type multi_value: bool
 :param missing_config_file_fail: If set, the check will fail if the configuration file doesn't exist in the system.
 :type missing_config_file_fail: bool
 
