fix: oval_argument_value_in_line/doc: fix types

--- a/shared/macros/10-oval.jinja
+++ b/shared/macros/10-oval.jinja
@@ -446,7 +446,7 @@ Generates the :code:`<affected>` tag for OVAL check using correct product platfo
 :param name: Argument name
 :type name: str
 :param value: Argument value
-:type name: str
+:type value: str
 :param line_prefix: The starting part of the line with the list of arguments, default is empty
 :type line_prefix: str
 :param line_suffix: The ending part of the line with the list of arguments, default is empty
