fix: ocil_cluster_logging_rbac_review/doc: fix types

--- a/shared/macros/10-ocil.jinja
+++ b/shared/macros/10-ocil.jinja
@@ -1245,7 +1245,7 @@ Create an OCIL text for rules using the audit_rules_unsuccessful_file_modificati
     OCIL for how to check RBAC permissions for cluster logging
 
 :param verb: The RBAC verb to check
-:type file: str
+:type verb: str
 
 #}}
 {{%- macro ocil_cluster_logging_rbac_review(verb) -%}}
