fix: fixtext_audit_rules_unsuccessful_file_modification_rule_order/doc: fix type

--- a/shared/macros/10-fixtext.jinja
+++ b/shared/macros/10-fixtext.jinja
@@ -164,7 +164,7 @@ The audit daemon must be restarted for the changes to take effect.
     Used in rules using template audit_rules_unsuccessful_file_modification_rule_order.
 
 :param syscall: syscall name
-:type path: str
+:type syscall: str
 
 #}}
 {{% macro fixtext_audit_rules_unsuccessful_file_modification_rule_order(syscall) -%}}
