fix: fixtext_audit_rules_unsuccessful_file_modification_o_trunc_write/doc: fix type

--- a/shared/macros/10-fixtext.jinja
+++ b/shared/macros/10-fixtext.jinja
@@ -149,7 +149,7 @@ The audit daemon must be restarted for the changes to take effect.
     Used in rules using template audit_rules_unsuccessful_file_modification_o_trunc_write
 
 :param syscall: syscall name
-:type path: str
+:type syscall: str
 :param pos: position of the O_CREAT argument in the syscall parameters
 :type pos: str
 
