--- a/shared/macros/10-fixtext.jinja
+++ b/shared/macros/10-fixtext.jinja
@@ -133,7 +133,7 @@ The audit daemon must be restarted for the changes to take effect.
     Used in rules using template audit_rules_unsuccessful_file_modification_o_creat
 
 :param syscall: syscall name
-:type path: str
+:type syscall: str
 :param pos: position of the O_CREAT argument in the syscall parameters
 :type pos: str
 
