--- a/shared/macros/10-fixtext.jinja
+++ b/shared/macros/10-fixtext.jinja
@@ -115,10 +115,10 @@ The audit daemon must be restarted for the changes to take effect.
     Used in rules using template audit_rules_unsuccessful_file_modification
 
 :param syscall: syscall name
-:type path: str
+:type syscall: str
 :param syscall_grouping: A list of other syscalls that can be audited with the
     same audit rules.
-:type path: str
+:type syscall_grouping: list
 
 #}}
 {{% macro fixtext_audit_rules_unsuccessful_file_modification(syscall, syscall_grouping) -%}}
